--- a/uiFile/main.ui
+++ b/uiFile/main.ui
@@ -6,21 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1840</width>
-    <height>1479</height>
+    <width>603</width>
+    <height>699</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Laser Module Checking Program by LN</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QSplitter" name="splitter_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>20</y>
-      <width>1661</width>
-      <height>131</height>
+      <x>40</x>
+      <y>40</y>
+      <width>521</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="orientation">
@@ -30,16 +30,16 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QLabel" name="system_information">
+     <widget class="QLabel" name="qt_label_info_connection">
       <property name="minimumSize">
        <size>
-        <width>500</width>
+        <width>0</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>500</width>
+        <width>16777215</width>
         <height>16777215</height>
        </size>
       </property>
@@ -56,78 +56,63 @@
        <number>20</number>
       </property>
      </widget>
-     <widget class="QLabel" name="information">
-      <property name="cursor">
-       <cursorShape>ArrowCursor</cursorShape>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
-      </property>
-      <property name="text">
-       <string>Move Information Text</string>
-      </property>
-      <property name="margin">
-       <number>30</number>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QFrame" name="frame_3">
-     <property name="maximumSize">
-      <size>
-       <width>200</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <widget class="QLabel" name="label">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>10</y>
-        <width>72</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Options</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-     <widget class="QWidget" name="layoutWidget">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>40</y>
-        <width>171</width>
-        <height>91</height>
-       </rect>
-      </property>
+     <widget class="QWidget" name="">
       <layout class="QVBoxLayout" name="verticalLayout">
+       <property name="spacing">
+        <number>4</number>
+       </property>
        <item>
-        <widget class="QRadioButton" name="radioButton">
+        <widget class="QLabel" name="label">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="lineWidth">
+          <number>1</number>
+         </property>
          <property name="text">
-          <string>RadioButton1</string>
+          <string>Checking Option</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QRadioButton" name="radioButton_2">
+        <widget class="QRadioButton" name="qt_radio_onetime">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="text">
-          <string>RadioButton2</string>
+          <string>One time</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QRadioButton" name="qt_radio_roof">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Roof</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="qt_measurement_btn">
      <property name="maximumSize">
       <size>
        <width>200</width>
@@ -142,212 +127,43 @@
      </property>
     </widget>
    </widget>
-   <widget class="QLCDNumber" name="layer_e">
-    <property name="enabled">
+   <widget class="QScrollArea" name="qt_scrollArea">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>190</y>
+      <width>521</width>
+      <height>431</height>
+     </rect>
+    </property>
+    <property name="widgetResizable">
      <bool>true</bool>
     </property>
-    <property name="geometry">
-     <rect>
-      <x>1200</x>
-      <y>450</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>519</width>
+       <height>429</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
-   <widget class="QGraphicsView" name="graphicsView">
-    <property name="geometry">
-     <rect>
-      <x>149</x>
-      <y>209</y>
-      <width>1041</width>
-      <height>1581</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLCDNumber" name="layer_a">
-    <property name="geometry">
-     <rect>
-      <x>36</x>
-      <y>443</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
-   </widget>
-   <widget class="QLCDNumber" name="layer_g">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>1200</x>
-      <y>690</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
-   </widget>
-   <widget class="QLCDNumber" name="layer_b">
-    <property name="geometry">
-     <rect>
-      <x>36</x>
-      <y>563</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
-   </widget>
-   <widget class="QLCDNumber" name="layer_d">
-    <property name="geometry">
-     <rect>
-      <x>36</x>
-      <y>813</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
-   </widget>
-   <widget class="QLCDNumber" name="layer_f">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>1200</x>
-      <y>570</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
-   </widget>
-   <widget class="QLCDNumber" name="layer_h">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>1200</x>
-      <y>820</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
-   </widget>
-   <widget class="QLCDNumber" name="layer_c">
-    <property name="geometry">
-     <rect>
-      <x>36</x>
-      <y>683</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::HLine</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>5</number>
-    </property>
-    <property name="segmentStyle">
-     <enum>QLCDNumber::Filled</enum>
-    </property>
-   </widget>
+   <zorder>splitter_2</zorder>
+   <zorder>qt_scrollArea</zorder>
+   <zorder>label</zorder>
+   <zorder>qt_radio_onetime</zorder>
+   <zorder>qt_radio_roof</zorder>
+   <zorder>label</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1840</width>
-     <height>31</height>
+     <width>603</width>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
@@ -368,7 +184,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>pushButton</sender>
+   <sender>qt_measurement_btn</sender>
    <signal>clicked()</signal>
    <receiver>MainWindow</receiver>
    <slot>slot_ok()</slot>
